// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBox component should have a default success prop value of true 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 3rem;
  background-color: #44764d;
  color: #FFF;
  font-size: 1.4rem;
  border: 2px solid #000;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  -webkit-animation: YsjJA 1s ease forwards;
  animation: YsjJA 1s ease forwards;
}

<div
  className="c0"
/>
`;

exports[`AlertBox component should have a green or red background if the success prop is true or false 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 3rem;
  background-color: #44764d;
  color: #FFF;
  font-size: 1.4rem;
  border: 2px solid #000;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  -webkit-animation: YsjJA 1s ease forwards;
  animation: YsjJA 1s ease forwards;
}

<div
  className="c0"
/>
`;

exports[`AlertBox component should have a green or red background if the success prop is true or false 2`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem 3rem;
  background-color: #993d4d;
  color: #FFF;
  font-size: 1.4rem;
  border: 2px solid #000;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  -webkit-animation: YsjJA 1s ease forwards;
  animation: YsjJA 1s ease forwards;
}

<div
  className="c0"
/>
`;
